Fix mini player sticky and player UI alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,11 +23,6 @@
 }
 
 body {
-  margin-top: env(safe-area-inset-top);
-  margin-left: env(safe-area-inset-left);
-  margin-right: env(safe-area-inset-right);
-  margin-bottom: env(safe-area-inset-bottom);
-
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
